# auto-prompt-opt-dspy-cross-encoders

./: README.md  main.py  optimized_hotpot_qa.json  pyproject.toml
